Sat Sep 15 14:30:36 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am: fix external_l.c dependency problem

Fri Sep 14 23:40:14 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* remove unused makebearoff1 program

Fri Sep 14 13:58:36 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, configure.in: remove need for fstat

Fri Sep 14 13:28:57 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* .cvsignore, backgammon.h, bearoff.c, bearoffgammon.h, boarddim.h,
	boardpos.h, common.h, dice.c, eval.h, gnubgmodule.c, gtk-multiview.h,
	gtkboard.h, gtkcolour.h, gtkprefs.c, render.c, render.h,
	renderprefs.c, board3d/drawboard3d.c, board3d/matrix.c,
	board3d/misc3d.c, board3d/model.c: header clean-up. Use definitions
	from glib.h instead.

Fri Sep 14 09:52:15 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, set.c: Make lang change more robust

Mon Sep  3 11:40:07 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* html.c: fix tmpfile creation problem to allow export of gammonline
	to clipboard under MS Vista.

Mon Sep  3 01:18:12 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix buffer overflow on 64 bit platforms
	* analysis.c, gnubg.c, multithread.c, rollout.c: add a new --debug
	option to turn on debugging for multithreaded code.

Sun Sep  2 22:20:43 CEST 2007 Christian Anthon <anthon@kiku.dk>

	*  board3d/misc3d.h, speed.h: new files
	* analysis.c, analysis.h, backgammon.h, board3d/drawboard3d.c,
	board3d/fun3d.h, board3d/graph.c, board3d/gtkcolour3d.c,
	board3d/Makefile.am, board3d/misc3d.c, board3d/widget3d.c, dice.c,
	eval.c, eval.h, external_y.y, format.c, gnubg.c, gnubgmodule.c,
	gnubgmodule.h, gtkboard.c, gtkchequer.c, gtkchequer.h, gtkfile.c,
	gtkgame.c, gtkgame.h, gtkgamelist.c, gtkmovelist.c, gtkmovelistctrl.c,
	gtkmovelistctrl.h, gtkoptions.c, gtkoptions.h, gtkpanels.c,
	gtkpanels.h, gtkprefs.c, gtkrace.c, gtkrelational.c, gtkrelational.h,
	gtkrolls.c, gtktoolbar.c, gtktoolbar.h, gtkwindows.c, gtkwindows.h,