@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: rollout.c,v 1.173 2007/09/02 23:21:16 c_anthon Exp $
+ * $Id: rollout.c,v 1.174 2007/09/19 20:16:07 c_anthon Exp $
  */
 
 #include "config.h"
@@ -1068,7 +1068,8 @@ extern void RolloutLoopMT(void)
       if (altGameCount[alt] >= cGames)
       {
 	      fNoMore[alt] = TRUE;
-	      g_assert (altGameCount[alt] == cGames);
+	      if (altGameCount[alt] > cGames)
+		      outputerrf("Too many rollouts done for alternative %d. This is a bug. Please report as many details as possible to bug-gnubg@gnu.org");
       }
       /* For normal alternatives nGamesDone and altGameCount will be equal.
        * For cube decisions, however, the two may differ by the number of
